@@ -8,6 +8,7 @@ Version 6.5.0
 - Fixed interaction between Parallax FS and stdio FILEs when multiple FILEs are open
 - Fixed missing mbrtowc implementation
 - Fixed overly agressive type checking on BASIC CPU() for asm code
+- Fixed Spin2 issue with variables named `result` in void functions
 - Implemented new Spin2 REPEAT n : i syntax (thanks, Ada!), and later added REPEAT n WITH i variant
 - Made _geterror() clear the error number
 - Allow & operator for string concatenation in BASIC
